--- a/app/index.html
+++ b/app/index.html
@@ -5,15 +5,53 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>from0to1</title>
+    <title>MartPlace</title>
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="wrapper">
         <div class="content">
+            <header class="header">
+                <div class="header__top">
+                    <div class="container">
+                        <div class="header__inner">
+                            <div class="header__logo"><a href="#"><img src="images/header-logo.png" alt=""></a></div>
+                            <div class="header-btn"><a href="#">Become a Seller</a></div>
+                            <div class="header-badges"></div>
+                            <div class="header__user">
+                                <div class="avatar" style="background-image: url(images/content/avatar.jpg)"></div>
+                                <div class="name"><a href="#">Taofiq Hakim</a><span>$20.45</span></div>
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                <div class="header__menu">
+                    <div class="container">
+                        <div class="header__bottom">
+                            <nav class="menu">
+                                <ul class="menu-list">
+                                    <li><a href="#">HOME</a></li>
+                                    <li><a href="#">all products</a></li>
+                                    <li><a href="#">wordpress</a></li>
+                                    <li><a href="#">festures</a></li>
+                                    <li><a href="#">Pages</a></li>
+                                </ul>
+                            </nav>
+                            <div class="header__menu-form">
+                                <form class="header__search">
+                                    <input type="text" placeholder="Search product here..." required>
+                                    <button type="submit"></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
 
+            </header>
 
 
         </div>
