--- a/app/login.html
+++ b/app/login.html
@@ -328,18 +328,18 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs-list">
                             <li><a href="#">Home </a></li>
-                            <li><a href="#">Login</a></li>
+                            <li><a href="#">Email</a></li>
                         </ul>
-                        <div class="breadcrumbs-list__title">Login</div>
+                        <div class="breadcrumbs-list__title">Email</div>
                     </div>
                 </div>
             </section>
-            <section class="login grey">
+            <section class="email grey">
                 <div class="container">
-                    <div class="login__inner">
-                        <div class="login__inner-text">Please enter the email address for your account. A verification code will be sent to you. Once you have received the verification code, you will be able to choose a new password for your account.</div>
-                        <div class="login-form">
-                            <div class="login-form__title">Email Address</div>
+                    <div class="email__inner">
+                        <div class="email__inner-text">Please enter the email address for your account. A verification code will be sent to you. Once you have received the verification code, you will be able to choose a new password for your account.</div>
+                        <div class="email-form">
+                            <div class="email-form__title">Email Address</div>
                             <form>
                                 <input type="text" placeholder="Enter your email address..." required>
                                 <button type="submit" class="links">Submit Now</button>
