--- a/app/index.html
+++ b/app/index.html
@@ -1084,12 +1084,12 @@
                                 </form>
                             </div>
                             <div class="footer-item__social">
-                                <span class="icon-facebook"></span>
-                                <span class="icon-twitter"></span>
-                                <span class="icon-google"></span>
-                                <span class="icon-pinterest-square"></span>
-                                <span class="icon-linkedin"></span>
-                                <span class="icon-futbol-o"></span>
+                                <a class="icon-facebook" href="#"></a>
+                                <a class="icon-twitter" href="#"></a>
+                                <a class="icon-google" href="#"></a>
+                                <a class="icon-pinterest-square" href="#"></a>
+                                <a class="icon-linkedin" href="#"></a>
+                                <a class="icon-futbol-o" href="#"></a>
                             </div>
                         </div>
                     </div>
