--- a/app/404err.html
+++ b/app/404err.html
@@ -328,23 +328,22 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs-list">
                             <li><a href="#">Home </a></li>
-                            <li><a href="#">Wordpress</a></li>
-                            <li><a href="#">Corporate & Business</a></li>
+                            <li><a href="#">404</a></li>
                         </ul>
-                        <div class="breadcrumbs-list__title">Wrost - Material Design Responsive Real Estate Template</div>
+                        <div class="breadcrumbs-list__title">Error-404</div>
+                    </div>
+                </div>
+            </section>
+            <section class="error">
+                <div class="container">
+                    <div class="error__inner">
+                        <a class="error-inner__img" style="background-image: url(images/content/404.png)" href="#"></a>
+                        <div class="error-inner__title">Oops! Page Not Found</div>
+                        <a class="error-inner__btn links" href="#">Back to Home</a>
                     </div>
                 </div>
             </section>
 
-            <section class="join" style="background-image: url(images/join-bg.png)">
-                <div class="container">
-                    <div class="join-inner">
-                        <div class="join-inner__title">Ready to Join Our Marketplace!</div>
-                        <div class="join-inner__content">Over 25,000 designers and developers trust the MartPlace.</div>
-                        <a class="join-inner__btn links" href="#">Join Us Today</a>
-                    </div>
-                </div>
-            </section>
         </div>
         <footer class="footer">
             <div class="container">
