aded login page

--- a/app/email.html
+++ b/app/email.html
@@ -328,34 +328,27 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs-list">
                             <li><a href="#">Home </a></li>
-                            <li><a href="#">Wordpress</a></li>
-                            <li><a href="#">Corporate & Business</a></li>
-                        </ul>
-                        <div class="breadcrumbs-list__title">Wrost - Material Design Responsive Real Estate Template</div>
-                    </div>
-                </div>
-            </section>
-            <section class="breadcrumbs" style="background-image: url(images/join-bg.png)">
-                <div class="container">
-                    <div class="breadcrumbs__inner">
-                        <ul class="breadcrumbs-list">
-                            <li><a href="#">Home </a></li>
                             <li><a href="#">Email</a></li>
                         </ul>
                         <div class="breadcrumbs-list__title">Email</div>
                     </div>
                 </div>
             </section>
-
-            <section class="join" style="background-image: url(images/join-bg.png)">
+            <section class="email grey">
                 <div class="container">
-                    <div class="join-inner">
-                        <div class="join-inner__title">Ready to Join Our Marketplace!</div>
-                        <div class="join-inner__content">Over 25,000 designers and developers trust the MartPlace.</div>
-                        <a class="join-inner__btn links" href="#">Join Us Today</a>
+                    <div class="email__inner">
+                        <div class="email__inner-text">Please enter the email address for your account. A verification code will be sent to you. Once you have received the verification code, you will be able to choose a new password for your account.</div>
+                        <div class="email-form">
+                            <div class="email-form__title">Email Address</div>
+                            <form>
+                                <input type="text" placeholder="Enter your email address..." required>
+                                <button type="submit" class="links">Submit Now</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </section>
+
         </div>
         <footer class="footer">
             <div class="container">
