--- a/app/login.html
+++ b/app/login.html
@@ -328,27 +328,58 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs-list">
                             <li><a href="#">Home </a></li>
-                            <li><a href="#">Email</a></li>
+                            <li><a href="#">Wordpress</a></li>
+                            <li><a href="#">Corporate & Business</a></li>
                         </ul>
-                        <div class="breadcrumbs-list__title">Email</div>
+                        <div class="breadcrumbs-list__title">Wrost - Material Design Responsive Real Estate Template</div>
                     </div>
                 </div>
             </section>
-            <section class="email grey">
+            <section class="breadcrumbs" style="background-image: url(images/join-bg.png)">
                 <div class="container">
-                    <div class="email__inner">
-                        <div class="email__inner-text">Please enter the email address for your account. A verification code will be sent to you. Once you have received the verification code, you will be able to choose a new password for your account.</div>
-                        <div class="email-form">
-                            <div class="email-form__title">Email Address</div>
+                    <div class="breadcrumbs__inner">
+                        <ul class="breadcrumbs-list">
+                            <li><a href="#">Home </a></li>
+                            <li><a href="#">Login</a></li>
+                        </ul>
+                        <div class="breadcrumbs-list__title">Login</div>
+                    </div>
+                </div>
+            </section>
+            <section class="login grey">
+                <div class="container">
+                    <div class="login__inner">
+                        <div class="login-header">
+                            <div class="login-header__title">Welcome Back</div>
+                            <div class="login-header__text">You can sign in with your username</div>
+                        </div>
+                        <div class="login-form">
                             <form>
-                                <input type="text" placeholder="Enter your email address..." required>
-                                <button type="submit" class="links">Submit Now</button>
+                                <div class="login-form__name">Username</div>
+                                <input type="text" placeholder="Enter your username..." required>
+                                <div class="login-form__pass">Password</div>
+                                <input type="text" placeholder="Enter your password..." required>
+                                <input type="checkbox" required>Remember me
+                                <button class="links" type="submit">Login Now</button>
                             </form>
+                        </div>
+                        <div class="login-bottom">
+                            <span>Lost your<a href="#">username</a>or <a href="#">password?</a></span>
+                            <span>Don't have an<a href="#">account?</a></span>
                         </div>
                     </div>
                 </div>
             </section>
 
+            <section class="join" style="background-image: url(images/join-bg.png)">
+                <div class="container">
+                    <div class="join-inner">
+                        <div class="join-inner__title">Ready to Join Our Marketplace!</div>
+                        <div class="join-inner__content">Over 25,000 designers and developers trust the MartPlace.</div>
+                        <a class="join-inner__btn links" href="#">Join Us Today</a>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
             <div class="container">
