added blog page + fif full landing

--- a/app/blog.html
+++ b/app/blog.html
@@ -328,34 +328,183 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs-list">
                             <li><a href="#">Home </a></li>
-                            <li><a href="#">Wordpress</a></li>
-                            <li><a href="#">Corporate & Business</a></li>
+                            <li><a href="#">Blog</a></li>
                         </ul>
-                        <div class="breadcrumbs-list__title">Wrost - Material Design Responsive Real Estate Template</div>
+                        <div class="breadcrumbs-list__title">Blog Version 02</div>
                     </div>
                 </div>
             </section>
-            <section class="breadcrumbs" style="background-image: url(images/join-bg.png)">
+            <section class="blog grey">
                 <div class="container">
-                    <div class="breadcrumbs__inner">
-                        <ul class="breadcrumbs-list">
-                            <li><a href="#">Home </a></li>
-                            <li><a href="#">Email</a></li>
-                        </ul>
-                        <div class="breadcrumbs-list__title">Email</div>
+                    <div class="blog__inner">
+                        <div class="blog-content">
+                            <div class="blog-content__item">
+                                <div class="blog-item__img"><a href="#" style="background-image: url(images/content/slider-img.jpeg)"></a></div>
+                                <div class="blog-item__header">
+                                    <a class="blog-item__title" href="#">Top Web Design Trends You Must Know in 2017</a>
+                                    <div class="blog-item__panel">
+                                        <div class="blog-item__panel-auth"><a href="#" style="background-image: url(images/content/item-auth.jpeg)"></a></div>
+                                        <div class="blog-item__panel-name">by<a href="#">AazzTech</a></div>
+                                        <a class="blog-item__panel-data icon-bell-o" href="#">24 Feb 2017</a>
+                                        <a class="blog-item__panel-com icon-comment-o" href="#">45</a>
+                                        <a class="blog-item__panel-view icon-eye" href="#">345</a>
+                                    </div>
+                                </div>
+                               <div class="blog-item__bottom">
+                                   <div class="blog-bottom__text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue.  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat sunt in culpa qui officia sunt in culpa qui officia.</div>
+                                   <a class="links" href="#">Read More...</a>
+                               </div>
+                            </div>
+                            <div class="blog-content__item">
+                                <div class="blog-item__img"><a href="#" style="background-image: url(images/content/slider-img.jpeg)"></a></div>
+                                <div class="blog-item__header">
+                                    <a class="blog-item__title" href="#">50+ Best Free Responsive WordPress Themes in 2017</a>
+                                    <div class="blog-item__panel">
+                                        <div class="blog-item__panel-auth"><a href="#" style="background-image: url(images/content/item-auth.jpeg)"></a></div>
+                                        <div class="blog-item__panel-name">by<a href="#">AazzTech</a></div>
+                                        <a class="blog-item__panel-data icon-bell-o" href="#">24 Feb 2017</a>
+                                        <a class="blog-item__panel-com icon-comment-o" href="#">16600</a>
+                                        <a class="blog-item__panel-view icon-eye" href="#">29990</a>
+                                    </div>
+                                </div>
+                                <div class="blog-item__bottom">
+                                    <div class="blog-bottom__text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue.  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat sunt in culpa qui officia sunt in culpa qui officia.</div>
+                                    <a class="links" href="#">Read More...</a>
+                                </div>
+                            </div>
+                            <div class="blog-content__item">
+                                <div class="blog-item__img"><a href="#" style="background-image: url(images/content/slider-img.jpeg)"></a></div>
+                                <div class="blog-item__header">
+                                    <a class="blog-item__title" href="#">20+ Best Free HTML Resume Templates</a>
+                                    <div class="blog-item__panel">
+                                        <div class="blog-item__panel-auth"><a href="#" style="background-image: url(images/content/item-auth.jpeg)"></a></div>
+                                        <div class="blog-item__panel-name">by<a href="#">AazzTech</a></div>
+                                        <a class="blog-item__panel-data icon-bell-o" href="#">24 Feb 2017</a>
+                                        <a class="blog-item__panel-com icon-comment-o" href="#">45</a>
+                                        <a class="blog-item__panel-view icon-eye" href="#">345</a>
+                                    </div>
+                                </div>
+                                <div class="blog-item__bottom">
+                                    <div class="blog-bottom__text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue.  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat sunt in culpa qui officia sunt in culpa qui officia.</div>
+                                    <a class="links" href="#">Read More...</a>
+                                </div>
+                            </div>
+                            <div class="pagination">
+                                <ul class="pagination-list">
+                                    <li class="first-pag"><a class="icon-long-arrow-left" href="#"></a></li>
+                                    <li class="active"><a href="#">1</a></li>
+                                    <li><a href="#">2</a></li>
+                                    <li><a class="icon-ellipsis-h" href="#"></a></li>
+                                    <li><a href="#">2000</a></li>
+                                    <li class="last-pag"><a class="icon-long-arrow-right" href="#"></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="blog-aside">
+                            <div class="blog-aside__item">
+                                <div class="blog-aside__title">Search Post</div>
+                                <div class="header__menu-form">
+                                    <form class="header__search">
+                                        <input type="text" placeholder="Search product here..." required>
+                                        <button type="submit"></button>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="blog-aside__item">
+                                <div class="aside-item__tabs">
+                                    <ul class="tabs">
+                                        <li class="tab active" data-id="1">Item Details</li>
+                                        <li class="tab" data-id="2">Commentsspan</li>
+                                    </ul>
+                                    <div class="tab_content">
+                                        <div class="tab-item active-tab" id="1">
+                                            <div class="tabs-item">
+                                                <div class="tabs-item__img"><a href="#" style="background-image: url(images/content/slider-img.jpeg)"></a></div>
+                                                <div class="tabs-item__info">
+                                                    <div class="tabs-item__info-title"><a href="#">5 best jQuery form validation plugins you must try</a></div>
+                                                    <a class="tabs-item__info-data icon-bell-o" href="#">24 Feb 2017</a>
+                                                </div>
+                                            </div>
+                                            <div class="tabs-item">
+                                                <div class="tabs-item__img"><a href="#" style="background-image: url(images/content/slider-img.jpeg)"></a></div>
+                                                <div class="tabs-item__info">
+                                                    <div class="tabs-item__info-title"><a href="#">Best free jQuery image  gallery plugins 2017</a></div>
+                                                    <a class="tabs-item__info-data icon-bell-o" href="#">24 Feb 2017</a>
+                                                </div>
+                                            </div>
+                                            <div class="tabs-item">
+                                                <div class="tabs-item__img"><a href="#" style="background-image: url(images/content/slider-img.jpeg)"></a></div>
+                                                <div class="tabs-item__info">
+                                                    <div class="tabs-item__info-title"><a href="#">10 Free Joomla! Templates</a></div>
+                                                    <a class="tabs-item__info-data icon-bell-o" href="#">24 Feb 2017</a>
+                                                </div>
+                                            </div>
+                                            <div class="tabs-item">
+                                                <div class="tabs-item__img"><a href="#" style="background-image: url(images/content/slider-img.jpeg)"></a></div>
+                                                <div class="tabs-item__info">
+                                                    <div class="tabs-item__info-title"><a href="#">How to Create One Page Joomla Template</a></div>
+                                                    <a class="tabs-item__info-data icon-bell-o" href="#">24 Feb 2017</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="tab-item" id="2">
+                                            <div class="tabs-item">
+                                                <div class="tabs-item__img"><a href="#" style="background-image: url(images/content/slider-img.jpeg)"></a></div>
+                                                <div class="tabs-item__info">
+                                                    <div class="tabs-item__info-title"><a href="#">10 Free Joomla! Templates</a></div>
+                                                    <a class="tabs-item__info-data icon-bell-o" href="#">24 Feb 2017</a>
+                                                </div>
+                                            </div>
+                                            <div class="tabs-item">
+                                                <div class="tabs-item__img"><a href="#" style="background-image: url(images/content/slider-img.jpeg)"></a></div>
+                                                <div class="tabs-item__info">
+                                                    <div class="tabs-item__info-title"><a href="#">How to Create One Page Joomla Template</a></div>
+                                                    <a class="tabs-item__info-data icon-bell-o" href="#">24 Feb 2017</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="blog-aside__item">
+                                <div class="blog-aside__title">Categories</div>
+                                <div class="blog-aside__category">
+                                    <ul class="aside-category__list">
+                                        <li><a class="icon-angle-right" href="#">Wordpress<span>35</span></a></li>
+                                        <li><a class="icon-angle-right" href="#">Landing Page<span>40</span></a></li>
+                                        <li><a class="icon-angle-right" href="#">Psd Template<span>01</span></a></li>
+                                        <li><a class="icon-angle-right" href="#">Plugins<span>100</span></a></li>
+                                        <li><a class="icon-angle-right" href="#">HTML Template<span>08</span></a></li>
+                                        <li><a class="icon-angle-right" href="#">Components<span>79</span></a></li>
+                                        <li><a class="icon-angle-right" href="#">Joomla Template<span>69</span></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="blog-aside__item">
+                                <div class="blog-aside__title">Popular Tags</div>
+                                <div class="blog-aside__tags">
+                                    <a href="#">Branding</a>
+                                    <a href="#">Design</a>
+                                    <a href="#">Marketing</a>
+                                    <a href="#">Design</a>
+                                    <a href="#">Design</a>
+                                    <a href="#">Marketing</a>
+                                    <a href="#">Branding</a>
+                                    <a href="#">Design</a>
+                                    <a href="#">Marketing</a>
+                                    <a href="#">Branding</a>
+                                    <a href="#">Design</a>
+                                    <a href="#">Design</a>
+                                </div>
+                            </div>
+                            <div class="banner" style="background-image: url(images/content/bannner.png)">
+                                <a class="banner-ad__content"  href="#">Banner<span>360x270</span></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
 
-            <section class="join" style="background-image: url(images/join-bg.png)">
-                <div class="container">
-                    <div class="join-inner">
-                        <div class="join-inner__title">Ready to Join Our Marketplace!</div>
-                        <div class="join-inner__content">Over 25,000 designers and developers trust the MartPlace.</div>
-                        <a class="join-inner__btn links" href="#">Join Us Today</a>
-                    </div>
-                </div>
-            </section>
         </div>
         <footer class="footer">
             <div class="container">
