--- a/app/single-product.html
+++ b/app/single-product.html
@@ -477,10 +477,12 @@
                             <div class="aside-buy">
                                 <div class="aside-btn">60<span>$</span></div>
                                 <div class="aside-content">
-                                    <div class="aside-content__title">Single User License<span class="icon-check"></span></div>
-                                    <div class="aside-content__text">Nunc placerat mi id nisi interdum is mollis. Praesent pharetra, justo ut sceleris que the mattis, leo quam.</div>
-                                    <div class="aside-content__title">Multi User License<span class="aside-title__circle"></span></div>
-                                    <button class="links">Purchase Now</button>
+                                    <form>
+                                        <label><input type="radio" name="radio1" required>Standart</label>
+                                        <span class="aside-content__text">Nunc placerat mi id nisi interdum is mollis. Praesent pharetra, justo ut sceleris que the mattis, leo quam.</span>
+                                        <label><input type="radio" name="radio1">Premium</label>
+                                        <button class="links">Purchase Now</button>
+                                    </form>
                                     <button class="links icon-shopping-cart">Add To Cart</button>
                                 </div>
                             </div>
@@ -555,7 +557,9 @@
             </section>
             <section class="more-item sgrey">
                 <div class="container">
-                    <div class="advantages-head__title">More Items by<span>Theme-Valley</span></div>
+                    <div class="advantages-head">
+                        <div class="advantages-head__title">More Items by<span>Theme-Valley</span></div>
+                    </div>
                     <div class="more-item__inner">
                         <div class="products-item favorites-item">
                             <a class="products-item__img" style="background-image: url(images/content/proects-item2.jpg)" href="#"></a>
