--- a/app/blog.html
+++ b/app/blog.html
@@ -205,6 +205,7 @@
                     <div class="container">
                         <div class="header__bottom">
                             <nav class="menu">
+                                <div class="menu-list__btn icon-bars"></div>
                                 <ul class="menu-list">
                                     <li class="dropdown">HOME
                                         <ul class="drop-menu">
@@ -401,16 +402,19 @@
                             </div>
                         </div>
                         <div class="blog-aside">
+                            <div class="blog-aside__item-wrap">
+
+                            </div>
                             <div class="blog-aside__item">
-                                <div class="blog-aside__title">Search Post</div>
-                                <div class="header__menu-form">
+                                <div class="blog-aside__title search-post">Search Post</div>
+                                <div class="header__menu-form search-post__form">
                                     <form class="header__search">
                                         <input type="text" placeholder="Search product here..." required>
                                         <button type="submit"></button>
                                     </form>
                                 </div>
                             </div>
-                            <div class="blog-aside__item">
+                            <div class="blog-aside__item blog-aside__item-tabs">
                                 <div class="aside-item__tabs">
                                     <ul class="tabs">
                                         <li class="tab active" data-id="1">Item Details</li>
@@ -467,7 +471,7 @@
                                 </div>
                             </div>
                             <div class="blog-aside__item">
-                                <div class="blog-aside__title">Categories</div>
+                                <div class="blog-aside__title category-post">Categories</div>
                                 <div class="blog-aside__category">
                                     <ul class="aside-category__list">
                                         <li><a class="icon-angle-right" href="#">Wordpress<span>35</span></a></li>
@@ -481,7 +485,7 @@
                                 </div>
                             </div>
                             <div class="blog-aside__item">
-                                <div class="blog-aside__title">Popular Tags</div>
+                                <div class="blog-aside__title tags-post">Popular Tags</div>
                                 <div class="blog-aside__tags">
                                     <a href="#">Branding</a>
                                     <a href="#">Design</a>
