--- a/app/single-product.html
+++ b/app/single-product.html
@@ -205,6 +205,7 @@
                     <div class="container">
                         <div class="header__bottom">
                             <nav class="menu">
+                                <div class="menu-list__btn icon-bars"></div>
                                 <ul class="menu-list">
                                     <li class="dropdown">HOME
                                         <ul class="drop-menu">
@@ -560,8 +561,8 @@
                     <div class="advantages-head">
                         <div class="advantages-head__title">More Items by<span>Theme-Valley</span></div>
                     </div>
-                    <div class="more-item__inner">
-                        <div class="products-item favorites-item">
+                    <div class="more-item__inner ">
+                        <div class="products-item favorites-item ">
                             <a class="products-item__img" style="background-image: url(images/content/proects-item2.jpg)" href="#"></a>
                             <div class="products-item__box">
                                 <div class="products-item__title">
@@ -584,7 +585,7 @@
                                 <div class="products-item__bottom-cart"><a class="icon-shopping-cart" href="#">6000</a></div>
                             </div>
                         </div>
-                        <div class="products-item favorites-item">
+                        <div class="products-item favorites-item ">
                             <a class="products-item__img" style="background-image: url(images/content/proects-item.jpg)" href="#"></a>
                             <div class="products-item__box">
                                 <div class="products-item__title">
@@ -604,7 +605,7 @@
                                 <div class="products-item__bottom-cart"><a class="icon-shopping-cart" href="#">54</a></div>
                             </div>
                         </div>
-                        <div class="products-item favorites-item">
+                        <div class="products-item favorites-item ">
                             <a class="products-item__img" style="background-image: url(images/content/proects-item3.jpg)" href="#"></a>
                             <div class="products-item__box">
                                 <div class="products-item__title">
