--- a/app/email.html
+++ b/app/email.html
@@ -205,6 +205,7 @@
                     <div class="container">
                         <div class="header__bottom">
                             <nav class="menu">
+                                <div class="menu-list__btn icon-bars"></div>
                                 <ul class="menu-list">
                                     <li class="dropdown">HOME
                                         <ul class="drop-menu">
