--- a/app/index.html
+++ b/app/index.html
@@ -179,7 +179,7 @@
                                     </div>
                                 </div>
                                 <div class="header__user">
-                                    <a class="avatar" href="#" style="background-image: url(images/content/avatar.jpg)"></a>
+                                    <a class="avatar" href="#" style="background-image: url(images/content/item-auth.jpeg)"></a>
                                     <div class="name"><a href="#">Taofiq Hakim</a><span>$20.45</span></div>
                                     <div class="header__user-drop" style="background-image: url(images/edge.png)">
                                         <ul class="drop-list">
@@ -205,6 +205,7 @@
                     <div class="container">
                         <div class="header__bottom">
                             <nav class="menu">
+                                <div class="menu-list__btn icon-bars"></div>
                                 <ul class="menu-list">
                                     <li class="dropdown">HOME
                                         <ul class="drop-menu">
@@ -316,7 +317,7 @@
                             <div class="header__menu-form">
                                 <form class="header__search">
                                     <input type="text" placeholder="Search product here..." required>
-                                    <button type="submit"></button>
+                                    <a type="submit" href="#"></a>
                                 </form>
                             </div>
                         </div>
@@ -379,6 +380,64 @@
                 <div class="container">
                     <div class="section-title">Weekly Featured Products</div>
                     <div class="slider-product__inner">
+                        <div class="slide-wrapper">
+                            <div class="slider-item">
+                                <a class="slider-item__img" style="background-image: url(images/content/slider-img.jpeg)"></a>
+                                <div class="slider-box">
+                                    <div class="slider-item__info">
+                                        <a class="info-title" href="#">One Page Resume Template</a>
+                                        <div class="info-author" style="background-image: url(images/content/item-auth.jpeg)">
+                                            <a href="#">AazzTech</a><span class="icon-wordpress">WordPress</span>
+                                        </div>
+                                        <div class="info__text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.</div>
+                                        <div class="info-links">
+                                            <a class="info-link" href="#">website</a>
+                                            <a class="info-link" href="#">plugin</a>
+                                            <a class="info-link" href="#">landing page</a>
+                                        </div>
+                                    </div>
+                                    <div class="info__panel">
+                                        <div class="info__panel-box">
+                                            <a class="info__panel-price" href="#">$10 - $50</a>
+                                            <a class="info__panel-like icon-heart-o" href="#">46</a>
+                                            <a class="info__panel-buy icon-shopping-cart" href="#">634</a>
+                                        </div>
+                                        <div class="info__panel-rate">
+                                            <div class="rate-star"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide-wrapper">
+                            <div class="slider-item">
+                                <a class="slider-item__img" style="background-image: url(images/content/slider-img.jpeg)"></a>
+                                <div class="slider-box">
+                                    <div class="slider-item__info">
+                                        <a class="info-title" href="#">One Page Resume Template</a>
+                                        <div class="info-author" style="background-image: url(images/content/item-auth.jpeg)">
+                                            <a href="#">AazzTech</a><span class="icon-wordpress">WordPress</span>
+                                        </div>
+                                        <div class="info__text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.</div>
+                                        <div class="info-links">
+                                            <a class="info-link" href="#">website</a>
+                                            <a class="info-link" href="#">plugin</a>
+                                            <a class="info-link" href="#">landing page</a>
+                                        </div>
+                                    </div>
+                                    <div class="info__panel">
+                                        <div class="info__panel-box">
+                                            <a class="info__panel-price" href="#">$10 - $50</a>
+                                            <a class="info__panel-like icon-heart-o" href="#">46</a>
+                                            <a class="info__panel-buy icon-shopping-cart" href="#">634</a>
+                                        </div>
+                                        <div class="info__panel-rate">
+                                            <div class="rate-star"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="slide-wrapper">
                             <div class="slider-item">
                                 <a class="slider-item__img" style="background-image: url(images/content/slider-img.jpeg)"></a>
